--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ Version: 1.0
     opacity: 1;
     border-radius: 50%;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
